--- a/word_frequency.ipynb
+++ b/word_frequency.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "c329554c-be28-422b-945e-69017c88d876",
    "metadata": {},
    "outputs": [
@@ -10,14 +10,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter text The dog ate the cat the ate the dog\n"
+      "Enter text Be nice everyday\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'The': 1, 'dog': 2, 'ate': 2, 'the': 3, 'cat': 1}\n"
+      "{'Be': 1, 'nice': 1, 'everyday': 1}\n"
      ]
     }
    ],
@@ -36,8 +36,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "eb5b5e98-a705-4fc5-a454-9469daa352e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### you are welcome to change it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bc080e36-5830-425f-8c41-f47f13b16040",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter text I know you\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'I': 1, 'know': 1, 'you': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "example_2 = main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39b5acd5-b4f1-4fac-a715-dead8819f994",
    "metadata": {},
    "outputs": [],
    "source": []
